src/main/kubernetes/3-k8s-catalogo-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sri-catalogo-api-jvm-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: kubelab.sri.gob.ec
    http:
      paths:
      - path: /catalogo/
        pathType: Prefix
        backend:
          service:
            name: sri-catalogo-api-jvm-svc
            port:
              number: 80
